--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html>
   <head>
     <title>Wordplay</title>
@@ -28,7 +29,7 @@
         <ul id="guess" class="word">
           <li>A</li><li>A</li><li>A</li><li>A</li><li>A</li><li>A</li>
         </ul>
-        <img src="public/images/kitty.jpg" class="kitty" alt="two hot chicks having sex" />
+        <img src="public/images/kitten.jpeg" class="kitty" alt="two hot chicks having sex" />
       </div>
       <div id="report" class="section">
         <ul id="found">
