added background, fleshed out boxes, started text design.

--- a/index.html
+++ b/index.html
@@ -23,20 +23,28 @@
             </dl>
           </li>
         </ul>
-        <ul id="letters" class="word">
-          <li>A</li><li>A</li><li>A</li><li>A</li><li>A</li><li>A</li>
-        </ul>
-        <ul id="guess" class="word">
-          <li>A</li><li>A</li><li>A</li><li>A</li><li>A</li><li>A</li>
-        </ul>
+	<ul id="words">
+	  <li>
+	   <label for="letters"> Available Letters</label>
+	    <ul id="letter" class="word">
+	      <li>A</li><li>A</li><li>A</li><li>A</li><li>A</li><li>A</li>
+   	    </ul>
+	  </li>
+	  <li>
+	    <label for="guess"> Guessed Letters</label>
+            <ul id="guess" class="word">
+              <li>A</li><li>A</li><li>A</li><li>A</li><li>A</li><li>A</li>
+            </ul>
+	  </li>
+	</ul>
         <img src="public/images/kitten.jpeg" class="kitty" alt="two hot chicks having sex" />
       </div>
       <div id="report" class="section">
         <ul id="found">
-          <li><ul class="word"> <li>A</li><li>A</li><li>A</li> </ul></li>
-          <li><ul class="word"> <li>A</li><li>A</li><li>A</li> </ul></li>
-          <li><ul class="word"> <li>A</li><li>A</li><li>A</li> </ul></li>
-          <li><ul class="word"> <li>A</li><li>A</li><li>A</li> </ul></li>
+          <li><ul class="fword"> <li>A</li><li>A</li><li>A</li> </ul></li>
+          <li><ul class="fword"> <li>A</li><li>A</li><li>A</li> </ul></li>
+          <li><ul class="fword"> <li>A</li><li>A</li><li>A</li> </ul></li>
+          <li><ul class="fword"> <li>A</li><li>A</li><li>A</li> </ul></li>
         </ul>
         <ul id="status" class="display">
           <li>
