Want a good 'return' point

--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
 	<ul id="words">
 	  <li>
 	   <label for="letters"> Available Letters</label>
-	    <ul id="letter" class="word">
+	   <ul id="letter" class="word">
 	      <li>A</li><li>A</li><li>A</li><li>A</li><li>A</li><li>A</li>
    	    </ul>
+	    <!-- <table id="letter" class="word"> -->
+	    <!--   <tr><td>A</td><td>A</td><td>A</td><td>A</td><td>A</td><td>A</td></tr> -->
+	    <!-- 	  </table> -->
+	    <!-- </ul> -->
 	  </li>
 	  <li>
 	    <label for="guess"> Guessed Letters</label>
