--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <title>Wordplay</title>
     <link rel="stylesheet" href="public/styles/main.css" type="text/css" media="screen" />
+    <script type="text/javascript" src="public/scripts/jquery.js"></script>
+    <script type="text/javascript" src="public/scripts/json2.js"></script>
+    <script type="text/javascript" src="public/scripts/wordplay.js"></script>
   </head>
   <body>
     <div id="main">
@@ -45,10 +48,6 @@
       </div>
       <div id="report" class="section">
         <ul id="found">
-          <li><ul class="fword"> <li>A</li><li>A</li><li>A</li> </ul></li>
-          <li><ul class="fword"> <li>A</li><li>A</li><li>A</li> </ul></li>
-          <li><ul class="fword"> <li>A</li><li>A</li><li>A</li> </ul></li>
-          <li><ul class="fword"> <li>A</li><li>A</li><li>A</li> </ul></li>
         </ul>
         <ul id="status" class="display">
           <li>
