--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li>
             <dl id="score">
               <dt>Score</dt>
-              <dd>1,234</dd>
+	      <dd id = "dynamicscore"></dd>
             </dl>
           </li>
         </ul>
