remaning and found words displays

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
           <li>
             <dl id="count">
               <dt>Words Found</dt>
-              <dd>4</dd>
+              <dd id="foundcount"></dd>
             </dl>
           </li>
           <li>
             <dl id="remaining">
               <dt>Remaining</dt>
-              <dd>0/4</dd>
+              <dd id="remcount"></dd>
             </dl>
           </li>
         </ul>
