--- a/index.html
+++ b/index.html
@@ -38,11 +38,6 @@
             </ul>
 	  </li>
 	</ul>
-        <img src="public/images/kitten.jpeg" class="kitty" alt="two hot chicks having sex" />
-      </div>
-      <div id="report" class="section">
-        <ul id="found">
-        </ul>
         <ul id="status" class="display">
           <li>
             <dl id="count">
@@ -57,6 +52,26 @@
             </dl>
           </li>
         </ul>
+
+        <img src="public/images/kitten.jpeg" class="kitty" alt="two hot chicks having sex" />
+      </div>
+      <div id="report" class="section">
+        <ul id="found">
+        </ul>
+        <!-- <ul id="status" class="display"> -->
+        <!--   <li> -->
+        <!--     <dl id="count"> -->
+        <!--       <dt>Words Found</dt> -->
+        <!--       <dd id="foundcount"></dd> -->
+        <!--     </dl> -->
+        <!--   </li> -->
+        <!--   <li> -->
+        <!--     <dl id="remaining"> -->
+        <!--       <dt>Remaining</dt> -->
+        <!--       <dd id="remcount"></dd> -->
+        <!--     </dl> -->
+        <!--   </li> -->
+        <!-- </ul> -->
       </div>
     </div>
   </body>
