new layout experiment

--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -5,15 +5,17 @@
     <link rel="stylesheet" href="experiment.css" type="text/css" media="screen" />
   </head>
   <body>
-    <div id="main">
-      <ul id="words">
-	<ul id="letter" class="word">
-	  A	  
-   	</ul>
-	<ul id="guess" class="word">
-	  B
-	</ul>
-      </ul>
+    <div id="status">
+      status
+    </div>
+    <div id="progress">
+      progress
+    </div>
+    <div id="play">
+      play
+    </div>
+    <div id="control">
+      control
     </div>
   </body>
 </html>
