--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -5,17 +5,19 @@
     <link rel="stylesheet" href="experiment.css" type="text/css" media="screen" />
   </head>
   <body>
-    <div id="status">
-      status
-    </div>
-    <div id="progress">
-      progress
-    </div>
-    <div id="play">
-      play
-    </div>
-    <div id="control">
-      control
-    </div>
+    <div id="everything">
+      <div id="status">
+	status
+      </div>
+      <div id="progress">
+	progress
+      </div>
+      <div id="play">
+	play
+      </div>
+      <div id="control">
+	control
+      </div>
+    </div>      
   </body>
 </html>
