--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -7,10 +7,16 @@
   <body>
     <div id="everything">
       <div id="status">
-	status
+	<div id="time">
+	  time
+	</div>
+	<h1>Wordplay</h1>
+	<div id="progress">
+	  progress
+	</div>
       </div>
-      <div id="progress">
-	progress
+      <div id="found">
+	found
       </div>
       <div id="play">
 	play
