--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -28,7 +28,15 @@
 	<li>A</li>
       </ul>
       <div id="play">
-	play
+	<div id="available_control">
+	  ac
+	</div>
+	<div id="guess_control">
+	  gc
+	</div>
+	<div id="remaining">
+	  rem
+	</div>
       </div>
       <div id="control">
 	control
