--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -1,9 +1,11 @@
-
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="utf-8" />
     <link rel="stylesheet" href="reset.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="experiment.css" type="text/css" media="screen" />
-  </head>
+    <title>Wordplay</title>
+</head>
   <body>
     <div id="everything">
       <div id="status">
@@ -39,7 +41,20 @@
 	</div>
       </div>
       <div id="control">
-	control
+	<button>
+	  Start
+	  </button>
+	<dl>
+	  <dt>
+	    score
+	  </dt>
+	  <dd>
+	    1000
+	  </dd>
+	</dl>
+	<button>
+	  stop
+	  </button>
       </div>
     </div>      
   </body>
