--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -9,9 +9,10 @@
   <body>
     <div id="everything">
       <div id="status">
-	<div id="time">
-	  time
-	</div>
+	<dl id="time">
+	  <dt>Timer</dt>
+	  <dd>3:00</dd>
+	</dl>
 	<h1>Wordplay</h1>
 	<div id="progress">
 	  progress
