status elements layout

--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -14,9 +14,12 @@
 	  <dd>3:00</dd>
 	</dl>
 	<h1>Wordplay</h1>
-	<div id="progress">
-	  progress
-	</div>
+	<dl id="progress">
+	  <dt>Words</dt>
+	  <dd id="found_word_count">7</dd>
+	  <span>/</span>
+	  <dd id="total_word_count">30</dd>
+	</dl>
       </div>
       <ul id="found">
 	<li>A</li>
