--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -182,17 +182,27 @@
 	    <li>word</li>
 	  </ul>
 	</li>
-
       </ul>
       <div id="play">
-	<div id="available_control">
-	  ac
-	</div>
-	<div id="guess_control">
-	  gc
-	</div>
+	<dl id="available_control">
+	  <dt>Available</dt>
+	  <dd>
+	    AAAAAA
+	    <img src="../public/images/shuffle-on.png" class="shuffle" alt="shuffle" />
+	  </dd>
+	</dl>
+	<dl id="guess_control">
+	  <dt>Guess</dt>
+	  <dd>
+	    AAAAAA
+	    <img src="../public/images/submit-off.png" class="submit" alt="submit" />
+	  </dd>
+	</dl>
 	<div id="remaining">
-	  rem
+	  <button>
+	    LEVEL UP!!!
+	    </button>
+	  <p><span>X</span> Points  to Next Level</p>
 	</div>
       </div>
       <div id="control">
