level 3 layout complete

--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -206,19 +206,22 @@
 	</div>
       </div>
       <div id="control">
-	<button>
+	<button id="start">
 	  Start
+	  </button>
+	<button id="pause">
+	  Pause
 	  </button>
 	<dl id="score">
 	  <dt>
-	    score
+	    Score
 	  </dt>
 	  <dd>
 	    1000
 	  </dd>
 	</dl>
 	<button>
-	  stop
+	  Stop
 	  </button>
       </div>
     </div>      
