found word letters

--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -23,165 +23,145 @@
       </div>
       <ul id="found">
 	<li>
-	  <ul>
-	    <li>worddd</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	  </ul>
-	</li>
-	<li>
-	  <ul>
-	    <li>worddd</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	  </ul>
-	</li>
-	<li>
-	  <ul>
-	    <li>worddd</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	  </ul>
-	</li>
-	<li>
-	  <ul>
-	    <li>worddd</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	  </ul>
-	</li>
-	<li>
-	  <ul>
-	    <li>worddd</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	  </ul>
-	</li>
-	<li>
-	  <ul>
-	    <li>worddd</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	  </ul>
-	</li>
-	<li>
-	  <ul>
-	    <li>worddd</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	  </ul>
-	</li>
-	<li>
-	  <ul>
-	    <li>worddd</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	  </ul>
-	</li>
-	<li>
-	  <ul>
-	    <li>worddd</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	  </ul>
-	</li>
-	<li>
-	  <ul>
-	    <li>worddd</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	    <li>word</li>
-	  </ul>
-	</li>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	    </li>
+	    <li>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	    </li>
+	    <li>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	    </li>
+	    <li>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	    </li>
+	    <li>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	    </li>
+	    <li>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	    </li>
+	    <li>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	    </li>
+	    <li>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	    </li>
+	    <li>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	    </li>
+	    <li>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	    </li>
       </ul>
       <div id="play">
 	<dl id="available_control">
