remaining and guess letter lis

--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -167,14 +167,14 @@
 	<dl id="available_control">
 	  <dt>Available</dt>
 	  <dd>
-	    AAAAAA
+	      <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
 	    <img src="../public/images/shuffle-on.png" class="shuffle" alt="shuffle" />
 	  </dd>
 	</dl>
 	<dl id="guess_control">
 	  <dt>Guess</dt>
 	  <dd>
-	    AAAAAA
+	    <ul class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
 	    <img src="../public/images/submit-off.png" class="submit" alt="submit" />
 	  </dd>
 	</dl>
