--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -185,6 +185,7 @@
 	  <p><span>X</span> Points  to Next Level</p>
 	</div>
       </div>
+      <img src="../public/images/panda_worried.png" class="panda" alt="neutral" />
       <div id="control">
 	<button id="start">
 	  Start
