message bubble styling

--- a/experiment/experiment.html
+++ b/experiment/experiment.html
@@ -185,7 +185,12 @@
 	  <p><span>X</span> Points  to Next Level</p>
 	</div>
       </div>
+      <div id="messaging">
+	<p id="message">
+	  error message here
+	  </p>
       <img src="../public/images/panda_worried.png" id="messanger"  alt="neutral" />
+      </div>
       <div id="control">
 	<button id="start">
 	  Start
